# EnergyNet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  config.py  data_loader.py  dataset_fix.py  milp_solver.py  pyproject.toml  requirements.txt  reserver_trainer.py  role_identifier.py  statistics.py  to_grid_prices.py  training_pipeline.py  visualize_reserve.py
.cursor/plans/: bar-ba649cf2.plan.md
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
models/: EnergyReturnLSTM.py
pretrained_models/: catboost_keep_reserve_24h.cbm  catboost_prosumer_reserve.cbm  catboost_prosumer_reserve_24h.cbm  catboost_prosumer_reserve_48h.cbm
results/folder_1/: claim_returns.csv  claims_open.csv  grid_import.csv  p2p_trades.csv  paid_earned.csv  summary.json
src/energynet/: __init__.py  config.py  data_loader.py
src/energynet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/energynet/barter_sim/: __init__.py  adapters.py  cli.py  engine.py  io.py  matching.py  metrics.py  models.py  pricing.py
src/energynet/barter_sim/tests/: test_accounting.py  test_barter_matching.py  test_claims_expiry.py
src/energynet/forecasting/: train_forecasters.py
src/energynet/viewer/: __init__.py  main.py
src/energynet/viewer/gui/: __init__.py  controller.py
src/energynet/viewer/io/: __init__.py  filesystem.py
src/energynet/viewer/plotting/: __init__.py  panels.py  utils.py
(+4 files in other folders)
