[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energynet"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "tqdm",
  "scikit-learn",
  "catboost",
]

[project.scripts]
energynet-viewer = "energynet.viewer.main:main"
energynet-barter = "energynet.barter_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}





